<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_app_icon_trans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivLogo"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:orientation="vertical">

        <com.bouldersmart.view.CustomEditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:font_et="@string/OpenSans_Regular" />

        <com.bouldersmart.view.CustomEditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_bg"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:font_et="@string/OpenSans_Regular" />

        <com.bouldersmart.view.CustomTextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/forgot_password_label"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:font_btn="@string/OpenSans_Bold" />

        <com.bouldersmart.view.CustomButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/btn_bg_border"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            app:font_btn="@string/OpenSans_Regular" />

        <RelativeLayout
            android:id="@+id/rlFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/fb_bg">

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_facebook_white_32dp" />

            <com.bouldersmart.view.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ivFacebook"
                android:gravity="center"
                android:text="@string/continue_with_facebook"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:font_btn="@string/OpenSans_Bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.bouldersmart.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:font_btn="@string/OpenSans_Regular" />

            <com.bouldersmart.view.CustomTextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:font_btn="@string/OpenSans_Bold" />


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>