<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_app_icon_trans" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:orientation="vertical">

            <com.bouldersmart.view.CustomEditText
                android:id="@+id/etFNameReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:font_et="@string/OpenSans_Regular" />

            <com.bouldersmart.view.CustomEditText
                android:id="@+id/etLNameReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_bg"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:font_et="@string/OpenSans_Regular" />

            <com.bouldersmart.view.CustomEditText
                android:id="@+id/etEmailReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_bg"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:font_et="@string/OpenSans_Regular" />

            <com.bouldersmart.view.CustomEditText
                android:id="@+id/etPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_bg"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:font_et="@string/OpenSans_Regular" />

            <com.bouldersmart.view.CustomButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/btn_bg_border"
                android:text="@string/sign_up_"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp"
                app:font_btn="@string/OpenSans_Regular" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.bouldersmart.view.CustomTextView
                    android:id="@+id/tvLoginReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/already_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:font_btn="@string/OpenSans_Regular" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>