<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/common_custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:gravity="center"
        android:orientation="vertical">

        <com.bouldersmart.view.CustomEditText
            android:id="@+id/etEmailForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:font_et="@string/OpenSans_Regular" />

        <com.bouldersmart.view.CustomButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/btn_bg_border"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            app:font_btn="@string/OpenSans_Regular" />

    </LinearLayout>

</LinearLayout>