<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/common_custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLocationImage"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_gallery_32dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <com.bouldersmart.view.CustomTextView
                android:id="@+id/tvCountRoute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="0"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_14sdp"
                app:font_et="@string/OpenSans_Bold" />

            <com.bouldersmart.view.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/routes"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_14sdp"
                app:font_et="@string/OpenSans_Bold" />
        </LinearLayout>

        <com.bouldersmart.view.CustomButton
            android:id="@+id/btnListRoutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_bg_border_square"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/list_of_routes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:font_btn="@string/OpenSans_Regular" />

        <com.bouldersmart.view.CustomButton
            android:id="@+id/btnApproachDirections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_bg_border_square"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/approach_directions"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:font_btn="@string/OpenSans_Regular" />


    </LinearLayout>
</LinearLayout>